# emoslib

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  NOTICE  VERSION.cmake  libemos.sublime-project  libemos_config.h.in  libemos_version.c.in  libemos_version.h.in  project_summary.cmake  version.c
bamboo/: CLANG-env.sh  INTEL-env.sh  flags.cmake  leap42-flags.cmake  macosx1010-flags.cmake  post-test
bufrdc_wmo/: CMakeLists.txt  README  bbuprs0.F  bbuprs1.F  bbuprs2.F  bbuprs3.F  bbuprt.F  bbuprtbox.F  bcmatb.F  bcmatbc.F  bcmbef.F  bcmct.F  bcmctc.F  bcmdefc.F  bcmel.F  bcmoff.F  bcmroot.F  bcmrq.F  bcmtab.F  bcmtabc.F  bcmtabload.F  bcmtabloadc.F  bcmwork.F  bcmwt.F  bcmwtc.F  bcomatb.F  bcomatbc.F  bcombef.F  bcomcom.F  bcomct.F  bcomctc.F  bcomdefc.F  bcomel.F  bcomoff.F  bcomp.F  bcomreq.F  bcomroot.F  bcomrq.F  bcomtab.F  bcomtabc.F  (+103 more)
bufrtables/: B0000000000000026000.TXT  B0000000000098026001.TXT  B0000000000098026002.TXT  B0000000000098026101.TXT  C0000000000000026000.TXT  C0000000000098026001.TXT  C0000000000098026002.TXT  C0000000000098026101.TXT  CMakeLists.txt  D0000000000000026000.TXT  D0000000000098026001.TXT  D0000000000098026002.TXT  D0000000000098026101.TXT  D0000000000104016001.TXT  VERSION.cmake  links.sh
common/: CMakeLists.txt  JPointer.h  fortint.h  fortreal.h  grprs.h
crexdc/: crex_get_name_unit.F  crexdes.F  crexedd.F  crexen.F  crexepwt.F  crexerr.F  crexetab.F  crexetd.F  crexetdr.F  crexex.F  crexinit.F  crexivar.F  crexoper.F  crexprco.F  crexprs0.F  crexprs1.F  crexprt.F  crexrep.F  crexs0.F  crexs1.F  crexs2.F  crexs2data.F  crexs5.F  crexsel.F  crexsel2.F  crexsrp.F  crexstdr.F  crextables.F  crextb.F  crexupwt.F  dec2octal.F  extgrp.F  extgrpc.F  get_units.F  nextgrp.F  nextprt.F  nextsec.F  nextsep.F  nextsubset.F  octal2dec.F
crextables/: B000203  B000207  D000203  D000207
debian/: changelog  control  copyright  libemos-bin.install  libemos-data.dirs  libemos-data.install  libemos-data.links  libemos-dev.dirs  libemos-dev.install  libemos-dev.links  libemos0d.install  libemos0d.shlibs  not-installed  rules  watch
fft/: fax.f  fft99.f  fft991.f  fftrig.f  gpfa.f  gpfa3.f  qpassf.f  qpassm.f  rpassf.f  rpassm.f  set99.f  setgpfa.f  syminv.f
gribex/: 0-INDEX-0  CMakeLists.txt  ECMWFdefinitions.c  ECMWFdefinitions.h  README  abortx.F  analsw.F  blckcr.F  bt_cray.F  bt_cyber.F  (+263 more)
libemos-dp/: CMakeLists.txt
libemos-sp/: CMakeLists.txt
tests/: CMakeLists.txt  example_intf.F90  example_intf2.F  example_intuvp2.F  gribex_abort.F  gribex_demo.F  link_mars.F  link_prodgen.F  settings.cmake  test_fft99.F  test_fftw.F  test_hsp2gg.F
tests/bufr/: CMakeLists.txt
tests/bufr/data/: request  synop_4.bufr  tracks_05W_PEIPAH_2014041000.eps.bufr  tracks_05W_PEIPAH_2014041000.eps.bufr4  tracks_05W_PEIPAH_2014041000.fm  tracks_15U_ITA_2014041000.eps.bufr  tracks_15U_ITA_2014041000.eps.bufr4  tracks_15U_ITA_2014041000.fm  tracks_15U_ITA_2014041012.det.bufr  tracks_15U_ITA_2014041012.det.bufr4  tracks_15U_ITA_2014041012.fm
tests/bufr/regress/: CMakeLists.txt  download_tests_bufr_src_files.txt
tests/data/: 2t_O640.grib  intf2_2t_O640_to_F48.grib.ref  intf2_2t_O640_to_F80.grib.ref  intf2_2t_O640_to_N80.grib.ref  intf2_2t_O640_to_O80.grib.ref  intf2_2t_O640_to_regular_ll.grib.ref  intf2_2t_O640_to_rotated_regular_ll.grib.ref  intf2_msl_N640_to_F48.grib.ref  intf2_msl_N640_to_F80.grib.ref  intf2_msl_N640_to_N80.grib.ref  intf2_msl_N640_to_O80.grib.ref  intf2_msl_N640_to_regular_ll.grib.ref  intf2_msl_N640_to_rotated_regular_ll.grib.ref  intf2_msl_regular_ll_to_F48.grib.ref  intf2_msl_regular_ll_to_F80.grib.ref  intf2_msl_regular_ll_to_regular_ll.grib.ref  intf2_q_F640_to_F48.grib.ref  intf2_q_F640_to_F80.grib.ref  intf2_q_F640_to_regular_ll.grib.ref  intf2_q_F640_to_rotated_regular_ll.grib.ref  intf2_vo-d_sh_to_F48.grib.ref  intf2_vo-d_sh_to_F80.grib.ref  intf2_vo-d_sh_to_N80.grib.ref  intf2_vo-d_sh_to_O80.grib.ref  intf2_vo-d_sh_to_regular_ll.grib.ref  intf2_vo-d_sh_to_rotated_regular_ll.grib.ref  intf2_z_sh_to_F48.grib.ref  intf2_z_sh_to_F80.grib.ref  intf2_z_sh_to_N80.grib.ref  intf2_z_sh_to_O80.grib.ref  intf2_z_sh_to_regular_ll.grib.ref  intf2_z_sh_to_rotated_regular_ll.grib.ref  intuvp2_vo-d_sh_to_F80.grib.ref  intuvp2_vo-d_sh_to_N80.grib.ref  intuvp2_vo-d_sh_to_O80.grib.ref  intuvp2_vo-d_sh_to_regular_ll.grib.ref  intuvp2_vo-d_sh_to_rotated_regular_ll.grib.ref  msl_regular_ll.grib  z_sh.grib
tests/ms_apps/: CMakeLists.txt  input_single_points  singlePointInterpolation.f90  singlePointInterpolation_eccodes.f90
tests/regress/: CMakeLists.txt  download_tests_regress_ref_files.txt  download_tests_regress_src_files.txt
tools/: CMakeLists.txt  except.c  gg_gridname.c  gg_latitudes.F  gg_single.c  int.F  loadReducedGaussian.pl
tools/bufr_exports/synop2bufr/: README  combase.h  combuff.h  comerror.h  comerrorc.h  comindx.h  cominit.h  comkey.h  compoin.h  comstation.h  comsubs.h  comwork.h  comwrt.h  comwrtc.h  create_gts_header.f  greek.gts.bufr  parameter.h  parbuf.h  synop2bufr.f  test.sh
tools/bufr_exports/synop2bufr/dat/: synop2bufr_station.txt.greece
tools/bufr_exports/synop2bufr/data/: greek.gts  greek.gts.bufr  greek.gts.bufr.gts
tools/bufr_exports/synop2bufr/station_list/: Pub9volA090928.flatfile  make_synop2bufr_station.f  read_station.f  synop2bufr_station.txt  wmo.txt  wmo_a.pl  wmo_make_station.f
tools/bufrtools_wmo/: CMakeLists.txt  bufr_0t2.F  bufr_88t89.F  bufr_add_bias.F90  bufr_check.F  bufr_compress.F  bufr_decode.F  bufr_decode_all.F  bufr_key.F  bufr_merg.F90  bufr_merge_tovs.F90  bufr_nt1.F  bufr_ntm.F  bufr_obs_filter.F  bufr_repack.F  bufr_repack_206t205.F  bufr_repack_satid.F  bufr_ship_anmh.F  bufr_ship_anmh_ERA.F  bufr_simulate.F90  bufr_split.F  emoslib_bufr_filter.F  grib2bufr.F90  mod_bufr.F90  my_exit.F  snow_key_repack.F  tc_tracks.F90  tc_tracks_10t5.F90  tc_tracks_det.F90  tc_tracks_eps.F90
tools/lsmReducedGaussian/: CMakeLists.txt  bitPack.c  ginout_c2.f90  grib2lsm.ksh  lsm.mars  run.sh
tools/singlePointInterpolation/: CMakeLists.txt  input_single_points  readme.txt  singlePointInterpolation.F
(+456 files in other folders)
